WINDUP-3602 Run project's tests on JDK 11 and 17 (#893)
* WINDUP-3602 Added 'surefire-jdk17' profile

* WINDUP-3602 Run project's tests on JDK 11 and 17

* WINDUP-3602 Added Maven cache management between jobs

* WINDUP-3602 Relaxed OpenJDK17 rules' tests